--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Times New Roman", Times, serif;
+  font-family: sans-serif;
+}
+
+.container {
+  width: 100%;
+  height: 100vh;
 }
 
 a {
@@ -160,4 +165,100 @@ span {
 
 .icon-area a:hover .fa-youtube {
   color: #ff0000;
+}
+
+.product-section {
+  width: 85%;
+  background-color: #fff;
+  box-shadow: 2px 2px 30px rgba(167, 158, 245, 0.2);
+  display: flex;
+  margin: 30px auto;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px 20px;
+  margin-top: -60px;
+  position: relative;
+  background-size: 1000px;
+  border-radius: 10px;
+}
+
+.product-section > h3 {
+  margin: 20px;
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.05);
+  font-family: myriad pro;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-align: center;
+  font-size: 2rem;
+  color: #323543;
+}
+
+.product {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 10px 0;
+  width: 100%;
+}
+
+.product-box {
+  width: 250px;
+  height: 330px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 8px;
+  position: relative;
+  margin: 10px 40px;
+}
+
+.product-box img {
+  height: 180px;
+}
+
+.product-box p {
+  color: #4d4d70;
+  font-family: myriad pro;
+  font-size: 0.9rem;
+  letter-spacing: 0.5;
+}
+
+.product-box a {
+  color: #2c2c2c;
+  font-family: poppins;
+  font-size: 1rem;
+}
+
+.buy-btn {
+  position: absolute;
+  width: 140px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: calibri;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 15% 15% 15% 15% / 50% 50% 50% 50%;
+  background: linear-gradient(120deg, #6b60ec 20%, #a166f4);
+  bottom: -20px;
+  color: #fff;
+  display: none;
+  animation: fade 0.2s;
+}
+
+.product-box:hover .buy-btn {
+  display: flex;
+}
+
+.product-box:hover {
+  box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+}
+
+.product-box:hover a:last-child {
+  color: #fff;
+  transition: all ease 0.3s;
 }
