--- a/css/style.css
+++ b/css/style.css
@@ -262,3 +262,43 @@ span {
   color: #fff;
   transition: all ease 0.3s;
 }
+
+.about {
+  display: flex;
+  width: 85%;
+  margin: 30px auto;
+  justify-content: space-around;
+  align-items: center;
+  padding: 30px;
+}
+
+.about-box {
+  width: 40%;
+  font-family: myriad pro;
+}
+
+.about-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.about-box h1 {
+  color: #333;
+  font-weight: 700;
+  font-size: 3rem;
+  margin: 0;
+}
+
+.about-box h4 {
+  color: #333;
+  font-weight: 700;
+  font-size: 2rem;
+  margin: 10px 0;
+}
+
+.about-box p {
+  font-size: 1rem;
+  color: #bdbdbd;
+  letter-spacing: 0.5px;
+}
